--- a/Traductor/package.json
+++ b/Traductor/package.json
@@ -28,6 +28,7 @@
     "@capacitor/preferences": "^6.0.2",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
+    "chart.js": "^4.4.4",
     "ionicons": "^7.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
