--- a/Traductor/package.json
+++ b/Traductor/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@awesome-cordova-plugins/file": "^6.9.0",
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.1.1",
     "@capacitor/haptics": "6.0.0",
@@ -30,6 +31,8 @@
     "@ionic/angular": "^8.0.0",
     "chart.js": "^4.4.4",
     "ionicons": "^7.2.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
